# spmm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bench.sh  gpu_array.hpp  spmm.cu
include/: fun_macros.h  gpu_array.hpp  sparse_csr.h  spmm.cuh
src/: main.cu  sparse_csr.cpp  sparse_csr.h  spmm.cu
